Temparary fix for mat-auto list appearing behind BS Modal

--- a/peer-tutor-ui/angular/src/app/home-page/home-page.component.scss
+++ b/peer-tutor-ui/angular/src/app/home-page/home-page.component.scss
@@ -2,6 +2,7 @@ body{
     width: 100%;
     height: 100%;
 }
+
 .btn-group {
     .btn-fab{
         position: fixed !important;
@@ -16,6 +17,9 @@ body{
     width: 100%;
   }
   
-  .example-full-width {
+.example-full-width {
     width: 100%;
-  }
+}
+
+// https://github.com/angular/material2/issues/5540
+.cdk-overlay-container { z-index: 9999; }
